--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -5,5 +5,5 @@ block content
         User List
     ul
         each user, i in userlist
-            li
+            li.userListItem
                 a(href='mailto:#(user.email)')=user.username
